@@ -39,7 +39,7 @@ class KisProfitAdapterTest {
     private static final Account ACCOUNT = new Account(
             UUID.randomUUID(), UUID.randomUUID(), "테스트계좌",
             "74420614", "appKey", "appSecret", "01",
-            Account.Broker.KIS, Instant.now(), Instant.now()
+            Account.Broker.KIS
     );
 
     @BeforeEach
@@ -63,8 +63,8 @@ class KisProfitAdapterTest {
                 ACCOUNT, LocalDate.of(2024, 1, 1), LocalDate.of(2024, 12, 31));
 
         assertThat(result.items()).hasSize(1);
-        assertThat(result.items().get(0).ticker()).isEqualTo(Ticker.SOXL);
-        assertThat(result.items().get(0).quantity()).isEqualTo(5);
+        assertThat(result.items().getFirst().ticker()).isEqualTo(Ticker.SOXL);
+        assertThat(result.items().getFirst().quantity()).isEqualTo(5);
         assertThat(result.totalRealizedProfit()).isEqualByComparingTo("125.00");
         assertThat(result.totalReturnRate()).isEqualByComparingTo("25.0");
     }
