@@ -35,12 +35,12 @@ class InfiniteStrategyTypeTest {
         // LOC SELL: 10/4=2, LIMIT SELL: 10-2=8
         AccountBalance balance = new AccountBalance(10, new BigDecimal("20"),
                 new BigDecimal("1000"));
-        InfinitePosition position = new InfinitePosition(balance, Ticker.SOXL, new BigDecimal("22"), BigDecimal.ONE);
+        InfinitePosition position = new InfinitePosition(balance, Ticker.SOXL, new BigDecimal("22"));
 
         List<Order> orders = strategy.buildOrders(position, TODAY);
 
         assertThat(orders).hasSize(4);
-        assertThat(orders.get(0)).matches(o -> o.orderType() == LOC && o.direction() == BUY && o.price().compareTo(position.averagePrice()) == 0);
+        assertThat(orders.getFirst()).matches(o -> o.orderType() == LOC && o.direction() == BUY && o.price().compareTo(position.averagePrice()) == 0);
         assertThat(orders.get(1)).matches(o -> o.orderType() == LOC && o.direction() == BUY && o.price().compareTo(position.referencePrice()) == 0);
         assertThat(orders.get(2)).matches(o -> o.orderType() == LOC && o.direction() == SELL && o.quantity() == 2);
         assertThat(orders.get(3)).matches(o -> o.orderType() == LIMIT && o.direction() == SELL && o.quantity() == 8 && o.price().compareTo(position.targetPrice()) == 0);
@@ -48,18 +48,21 @@ class InfiniteStrategyTypeTest {
     }
 
     @Test
-    @DisplayName("buildOrders 전반 Q=0: BUY①만 (BUY②<1주, SELL Q/4=0)")
+    @DisplayName("buildOrders 전반 Q=0: BUY①② + SELL 없음(Q/4=0) = 2건")
     void buildOrders_frontHalf_noQuantity() {
         // A=currentPrice=22, Q=0, D=1000 → B=1000, K=50
-        // G=22×1.20=26.40, BUY①: floor(50/2/22)=1, BUY②: floor(50/2/26.40)=0
+        // G=22×1.20=26.40
+        // BUY①: floor(50/2/22)=1(비용=22), BUY②: floor((50-22)/26.40)=floor(1.06)=1
+        // SELL: Q/4=0 → 없음
         AccountBalance balance = new AccountBalance(0, null,
                 new BigDecimal("1000"));
-        InfinitePosition position = new InfinitePosition(balance, Ticker.SOXL, new BigDecimal("22"), BigDecimal.ONE);
+        InfinitePosition position = new InfinitePosition(balance, Ticker.SOXL, new BigDecimal("22"));
 
         List<Order> orders = strategy.buildOrders(position, TODAY);
 
-        assertThat(orders).hasSize(1);
-        assertThat(orders.get(0)).matches(o -> o.orderType() == LOC && o.direction() == BUY);
+        assertThat(orders).hasSize(2);
+        assertThat(orders.getFirst()).matches(o -> o.orderType() == LOC && o.direction() == BUY && o.price().compareTo(position.averagePrice()) == 0);
+        assertThat(orders.get(1)).matches(o -> o.orderType() == LOC && o.direction() == BUY && o.price().compareTo(position.referencePrice()) == 0);
     }
 
     @Test
@@ -68,12 +71,12 @@ class InfiniteStrategyTypeTest {
         // A=5, Q=200, D=50 → B=1050, K=52.50, T≈19.05 (후반), K(52.50)>D(50)
         AccountBalance balance = new AccountBalance(200, new BigDecimal("5"),
                 new BigDecimal("50"));
-        InfinitePosition position = new InfinitePosition(balance, Ticker.SOXL, new BigDecimal("5"), BigDecimal.ONE);
+        InfinitePosition position = new InfinitePosition(balance, Ticker.SOXL, new BigDecimal("5"));
 
         List<Order> orders = strategy.buildOrders(position, TODAY);
 
         assertThat(orders).hasSize(1);
-        assertThat(orders.get(0)).matches(o -> o.orderType() == MOC && o.direction() == SELL && o.quantity() == 50); // 200/4
+        assertThat(orders.getFirst()).matches(o -> o.orderType() == MOC && o.direction() == SELL && o.quantity() == 50); // 200/4
     }
 
     @Test
@@ -82,12 +85,12 @@ class InfiniteStrategyTypeTest {
         // A=5, Q=200, D=100 → B=1100, K=55, T≈18.18 (후반), K(55)<=D(100)
         AccountBalance balance = new AccountBalance(200, new BigDecimal("5"),
                 new BigDecimal("100"));
-        InfinitePosition position = new InfinitePosition(balance, Ticker.SOXL, new BigDecimal("5"), BigDecimal.ONE);
+        InfinitePosition position = new InfinitePosition(balance, Ticker.SOXL, new BigDecimal("5"));
 
         List<Order> orders = strategy.buildOrders(position, TODAY);
 
         assertThat(orders).hasSize(3);
-        assertThat(orders.get(0)).matches(o -> o.orderType() == LOC && o.direction() == BUY);
+        assertThat(orders.getFirst()).matches(o -> o.orderType() == LOC && o.direction() == BUY);
         assertThat(orders.get(1)).matches(o -> o.orderType() == LOC && o.direction() == SELL && o.quantity() == 50); // 200/4
         assertThat(orders.get(2)).matches(o -> o.orderType() == LIMIT && o.direction() == SELL && o.quantity() == 150); // 200-50
     }
@@ -98,7 +101,7 @@ class InfiniteStrategyTypeTest {
         // B=2000, K=100, A=currentPrice=10, G=10×1.15=11.50
         // BUY①: floor(100/2/10)=5, BUY②: floor(100/2/11.50)=4 → 주문 있음
         AccountBalance balance = new AccountBalance(0, null, new BigDecimal("2000"));
-        InfinitePosition position = new InfinitePosition(balance, Ticker.TQQQ, new BigDecimal("10"), BigDecimal.ONE);
+        InfinitePosition position = new InfinitePosition(balance, Ticker.TQQQ, new BigDecimal("10"));
 
         List<Order> orders = strategy.buildOrders(position, TODAY);
 
